unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/SolicitudesTramitesYTransferencias__c.object-meta.xml
<CustomObject>
    <label>Solicitudes de Trámites y Transferencias</label>
    <nameField>
        <label>Numero de Solicitud</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitudes de Trámites y Transferencias</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>