unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/Aprobacion_Externa__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_Externa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación Externa</label>
    <type>Checkbox</type>
</CustomField>