unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/AprobadorIDExterno__c.field-meta.xml
<CustomField>
    <fullName>AprobadorIDExterno__c</fullName>
    <label>Aprobador ID Externo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>