unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <length>360</length>
    <type>Html</type>
</CustomField>