unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <label>Beneficiario</label>
    <type>TextArea</type>
</CustomField>