unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/EmpresaJaver__c.field-meta.xml
<CustomField>
    <fullName>EmpresaJaver__c</fullName>
    <label>Empresa Javer</label>
    <type>TextArea</type>
</CustomField>