unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/IncluyeFactura__c.field-meta.xml
<CustomField>
    <fullName>IncluyeFactura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incluye Factura</label>
    <type>Checkbox</type>
</CustomField>