unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/IncluyeIVA__c.field-meta.xml
<CustomField>
    <fullName>IncluyeIVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incluye IVA</label>
    <type>Checkbox</type>
</CustomField>