unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/NivelEdicion__c.field-meta.xml
<CustomField>
    <fullName>NivelEdicion__c</fullName>
    <description>Identificador del Nivel de Edición de la solicitud.</description>
    <label>NivelEdicion</label>
    <length>1</length>
    <type>Text</type>
</CustomField>