unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/NombreCuenta__c.field-meta.xml
<CustomField>
    <fullName>NombreCuenta__c</fullName>
    <label>Cuenta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>