unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <externalId>true</externalId>
    <label>Número</label>
    <length>38</length>
    <type>Text</type>
</CustomField>