unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/NumerodeSolicitud__c.field-meta.xml
<CustomField>
    <fullName>NumerodeSolicitud__c</fullName>
    <externalId>true</externalId>
    <label>Número de Solicitud</label>
    <length>38</length>
    <type>Text</type>
</CustomField>