unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/PorcentajeIVA__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeIVA__c</fullName>
    <label>Porcentaje IVA</label>
    <length>5</length>
    <type>Text</type>
</CustomField>