unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/Retenciones__c.field-meta.xml
<CustomField>
    <fullName>Retenciones__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retenciones</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>