unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/RetencionISR__c.field-meta.xml
<CustomField>
    <fullName>RetencionISR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retención ISR</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>