unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/RetencionIVA__c.field-meta.xml
<CustomField>
    <fullName>RetencionIVA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retención IVA</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>