unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/StatusInternoAprobacion__c.field-meta.xml
<CustomField>
    <fullName>StatusInternoAprobacion__c</fullName>
    <label>Status Interno Aprobacion</label>
    <length>15</length>
    <type>Text</type>
</CustomField>