unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <length>360</length>
    <type>Html</type>
</CustomField>