unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/UEN_Id__c.field-meta.xml
<CustomField>
    <fullName>UEN_Id__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Identificador de Unidad de Negocio.</description>
    <label>UEN_Id</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>