unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/fields/UnidaddeNegocios__c.field-meta.xml
<CustomField>
    <fullName>UnidaddeNegocios__c</fullName>
    <label>Unidad Estratégica de Negocios</label>
    <length>100</length>
    <type>Text</type>
</CustomField>