unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/recordTypes/Tramite.recordType-meta.xml
<RecordType>
    <fullName>Tramite</fullName>
    <active>true</active>
    <label>Trámites</label>
</RecordType>