unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/recordTypes/Transferencia.recordType-meta.xml
<RecordType>
    <fullName>Transferencia</fullName>
    <active>true</active>
    <label>Transferencias</label>
</RecordType>