unpackaged/main/default/objects/SolicitudesTramitesYTransferencias__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NombreCuenta__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Aprobador__c</columns>
    <columns>EstadodeSolicitud__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>